# surveilrctl

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml
src/: error.rs  main.rs  setup.rs  upgrade.rs
