[package]
name = "surveilrctl"
version = "0.1.6"
edition = "2021"
description = "Setup utilities of surveilr osquery-ms server"

[dependencies]
upt = "0.9.0"
clap = { version = "4.5.34", features = ["derive", "env"] }
self_update = { version = "0.42.0", features = [
    "archive-tar",
    "archive-zip",
    "compression-flate2",
    "compression-zip-deflate"
] }