[package]
name = "surveilrctl"
version = "0.1.7"
edition = "2021"
description = "Setup utilities of surveilr osquery-ms server"

[dependencies]
upt = "0.9.0"
clap = { version = "4.5.35", features = ["derive", "env"] }
self_update = { version = "0.42.0", features = [
    "archive-tar",
    "archive-zip",
    "compression-flate2",
    "compression-zip-deflate"
] }
reqwest = { version = "0.11", features = ["blocking", "json"] }