[package]
name = "surveilrctl"
version = "0.1.10"
edition = "2021"
description = "Setup utilities of surveilr osquery-ms server"

[dependencies]
upt = "0.9.0"
clap = { version = "4.5.35", features = ["derive", "env"] }
self_update = { version = "0.42.0", features = [
    "archive-tar",
    "archive-zip",
    "compression-flate2",
    "compression-zip-deflate"
] }
reqwest = { version = "0.12", features = ["blocking", "json"] }

[dev-dependencies]
mockito = "1.2.0"
tempfile = "3.8.0"